renamed Element to JsonValue simply because it's more in line with the outside world